k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-exam-deployment
  namespace: smart-exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smart-exam
  template:
    metadata:
      labels:
        app: smart-exam
    spec:
      containers:
        - name: smart-exam
          image: smart-exam-system:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5

         
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
