k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-exam-service
  namespace: smart-exam

spec:
  selector:
    app: smart-exam

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
